--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="description" content="Carolina's portfolio and contact info" />
-    <title>Carolina Dias: Full-Stack Developer</title>
+    <title>Carolina Dias: Front-end Developer</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -22,7 +22,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Carolina Dias</a>
+        <a class="navbar-brand" href="index.html">carolina dias</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -51,7 +51,7 @@
         </div>
       </div>
     </nav>
-    <h2 class="text-center">👩🏻‍💻 Hey, I am</h2>
+    <h2 class="text-center">Hey, I am</h2>
     <h1 class="text-center">Carolina Dias</h1>
     <h3 class="text-center">Front End Developer, based in Canada 🇨🇦</h3>
     <div class="navigation-links mb-5">
@@ -64,7 +64,7 @@
           <img src="images/yoga.png" class="img-fluid rounded" />
         </div>
         <div class="col-6">
-          <h2 class="mb-3">Yoga app</h2>
+          <h2 class="mb-3">Glossary</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -98,7 +98,7 @@
           <img src="images/yogurt.png" class="img-fluid rounded" />
         </div>
         <div class="col-6">
-          <h2 class="mb-3">Yogurt app</h2>
+          <h2 class="mb-3">PDF Radar</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
