--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
@@ -53,12 +60,33 @@
     </nav>
     <h2 class="text-center">Hey, I am</h2>
     <h1 class="text-center">Carolina Dias</h1>
-    <h3 class="text-center">Front End Developer, based in Canada 🇨🇦</h3>
+    <h3 class="text-center">Front End Developer, based in Montréal, Canada</h3>
     <div class="navigation-links mb-5">
       <a href="about.html#contact" class="primary-link">Contact me</a>
-      <a href="about.html" class="secondary-link">About me</a>
+      <a href="about.html" class="secondary-link">See my projects →</a>
     </div>
-    <div class="container">
+    <div class="container about">
+      <h2 class="mb-3 about-header">About me</h2>
+      <div class="row align-items-center">
+        <div class="col-6">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+        </div>
+        <div class="col-6">
+          <img
+            src="images/personal-photo.png"
+            class="img-fluid"
+            id="personal-photo"
+          />
+        </div>
+      </div>
+    </div>
+    <div class="container projects">
+      <h2 class="mb-3 about-header">About me</h2>
       <div class="row">
         <div class="col-6">
           <img src="images/yoga.png" class="img-fluid rounded" />
