--- a/index.html
+++ b/index.html
@@ -58,16 +58,23 @@
         </div>
       </div>
     </nav>
-    <h2 class="text-center">Hey, I am</h2>
-    <h1 class="text-center">Carolina Dias</h1>
-    <h3 class="text-center">Front End Developer, based in Montréal, Canada</h3>
-    <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link">Contact me</a>
-      <a href="about.html" class="secondary-link">See my projects →</a>
+    <div class="container-fluid hero">
+      <h2 class="text-center">Hey, I am</h2>
+      <h1 class="text-center">Carolina Dias</h1>
+      <h3 class="text-center">
+        Front End Developer, based in Montréal, Canada
+      </h3>
+      <div class="navigation-links">
+        <a href="about.html#contact" class="contact-btn">Contact me</a>
+        <a href="about.html" class="projects-btn">See my projects →</a>
+      </div>
     </div>
-    <div class="container about">
-      <h2 class="mb-3 about-header">About me</h2>
-      <div class="row align-items-center">
+
+    <div class="container-fluid about">
+      <h2 class="mb-3 about-header">
+        <mark>About me</mark>
+      </h2>
+      <div class="row">
         <div class="col-6">
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -75,55 +82,58 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <ul>
+            <li>JavaScript</li>
+            <li>React</li>
+            <li>Node.js</li>
+            <li>Next.js</li>
+            <li>Python</li>
+            <li>Flask</li>
+          </ul>
         </div>
         <div class="col-6">
           <img
-            src="images/personal-photo.png"
+            src="images/personal.jpeg"
             class="img-fluid"
             id="personal-photo"
           />
         </div>
       </div>
     </div>
-    <div class="container projects">
-      <h2 class="mb-3 about-header">About me</h2>
-      <div class="row">
-        <div class="col-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
-        </div>
-        <div class="col-6">
-          <h2 class="mb-3">Glossary</h2>
-          <p>
+    <div class="container-fluid projects">
+      <h2 class="mb-3 projects-header"><mark>Projects</mark></h2>
+
+      <div class="row mt-5 align-items-center">
+        <div class="col-6 project-description">
+          <h2 class="mb-3 project-title">Weather app</h2>
+          <p class="project-paragraph">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
+          <div class="project-keywords">
+            <div>JavaScript</div>
+            <div>CSS</div>
+            <div>Bootstrap</div>
           </div>
+          <div class="mt-5">
+            <a href="#" class="project-link">Launch Weather App</a>
+          </div>
+        </div>
+        <div class="col-6">
+          <img src="images/weather.png" class="img-fluid rounded project-img" />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-6">
-          <h2 class="mb-3">Weather app</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
-          </div>
-        </div>
-        <div class="col-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
-        </div>
-      </div>
-      <div class="row mt-5">
-        <div class="col-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" />
+          <img src="images/yogurt.png" class="img-fluid rounded project-img" />
         </div>
         <div class="col-6">
           <h2 class="mb-3">PDF Radar</h2>
@@ -136,6 +146,23 @@
           <div class="mt-5">
             <a href="#" class="primary-link">Launch Weather App</a>
           </div>
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col-6">
+          <h2 class="mb-3">Glossary</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="mt-5">
+            <a href="#" class="primary-link">Launch Yoga App</a>
+          </div>
+        </div>
+        <div class="col-6">
+          <img src="images/yoga.png" class="img-fluid rounded project-img" />
         </div>
       </div>
     </div>
