Updated HTML classes

--- a/index.html
+++ b/index.html
@@ -131,34 +131,45 @@
           <img src="images/weather.png" class="img-fluid rounded project-img" />
         </div>
       </div>
-      <div class="row mt-5">
+      <div class="row mt-5 align-items-center">
         <div class="col-6">
           <img src="images/yogurt.png" class="img-fluid rounded project-img" />
         </div>
-        <div class="col-6">
-          <h2 class="mb-3">PDF Radar</h2>
-          <p>
+        <div class="col-6 project-description">
+          <h2 class="mb-3 project-title">PDF Radar</h2>
+          <p class="project-paragraph">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
+          <div class="project-keywords">
+            <div>Python</div>
+            <div>ETL</div>
+            <div>NLP</div>
+            <div>Flask</div>
+          </div>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="project-link">Launch Weather App</a>
           </div>
         </div>
       </div>
-      <div class="row mt-5">
-        <div class="col-6">
-          <h2 class="mb-3">Glossary</h2>
-          <p>
+      <div class="row mt-5 align-items-center">
+        <div class="col-6 project-description">
+          <h2 class="mb-3 project-title">Glossary</h2>
+          <p class="project-paragraph">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
+          <div class="project-keywords">
+            <div>Google Scripts</div>
+            <div>JavaScript</div>
+            <div>CSS</div>
+          </div>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
+            <a href="#" class="project-link">Launch Yoga App</a>
           </div>
         </div>
         <div class="col-6">
