--- a/index.html
+++ b/index.html
@@ -71,11 +71,9 @@
     </div>
 
     <div class="container-fluid about">
-      <h2 class="mb-3 about-header">
-        <mark>About me</mark>
-      </h2>
+      <h2 class="mb-3 about-header">About me</h2>
       <div class="row">
-        <div class="col-6">
+        <div class="col-md-6">
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -97,7 +95,7 @@
             <li>Flask</li>
           </ul>
         </div>
-        <div class="col-6">
+        <div class="col-md-6">
           <img
             src="images/personal.jpeg"
             class="img-fluid"
@@ -110,7 +108,7 @@
       <h2 class="mb-3 projects-header"><mark>Projects</mark></h2>
 
       <div class="row mt-5 align-items-center">
-        <div class="col-6 project-description">
+        <div class="col project-description">
           <h2 class="mb-3 project-title">Weather app</h2>
           <p class="project-paragraph">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -127,15 +125,15 @@
             <a href="#" class="project-link">Launch Weather App</a>
           </div>
         </div>
-        <div class="col-6">
-          <img src="images/weather.png" class="img-fluid rounded project-img" />
+        <div class="col d-none d-lg-block">
+          <img src="images/weather.jpg" class="img-fluid rounded project-img" />
         </div>
       </div>
       <div class="row mt-5 align-items-center">
-        <div class="col-6">
+        <div class="col d-none d-lg-block">
           <img src="images/yogurt.png" class="img-fluid rounded project-img" />
         </div>
-        <div class="col-6 project-description">
+        <div class="col project-description">
           <h2 class="mb-3 project-title">PDF Radar</h2>
           <p class="project-paragraph">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -155,7 +153,7 @@
         </div>
       </div>
       <div class="row mt-5 align-items-center">
-        <div class="col-6 project-description">
+        <div class="col project-description">
           <h2 class="mb-3 project-title">Glossary</h2>
           <p class="project-paragraph">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -172,7 +170,7 @@
             <a href="#" class="project-link">Launch Yoga App</a>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col d-none d-lg-block">
           <img src="images/yoga.png" class="img-fluid rounded project-img" />
         </div>
       </div>
