responsive about section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="#about-anchor">About me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html#contact">Contact me</a>
@@ -66,14 +66,14 @@
       </h3>
       <div class="navigation-links">
         <a href="about.html#contact" class="contact-btn">Contact me</a>
-        <a href="about.html" class="projects-btn">See my projects →</a>
+        <a href="#project-anchor" class="projects-btn">See my projects →</a>
       </div>
     </div>
 
-    <div class="container-fluid about">
+    <div class="container-fluid about" id="about-anchor">
       <h2 class="mb-3 about-header">About me</h2>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-lg-6">
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -95,7 +95,7 @@
             <li>Flask</li>
           </ul>
         </div>
-        <div class="col-md-6">
+        <div class="col-lg-6 mb-3">
           <img
             src="images/personal.jpeg"
             class="img-fluid"
@@ -104,8 +104,8 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid projects">
-      <h2 class="mb-3 projects-header"><mark>Projects</mark></h2>
+    <div class="container-fluid projects" id="project-anchor">
+      <h2 class="mb-3 projects-header">Projects</h2>
 
       <div class="row mt-5 align-items-center">
         <div class="col project-description">
