basic contact section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <a class="nav-link" href="#about-anchor">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a class="nav-link" href="#contact-anchor">Contact me</a>
             </li>
           </ul>
         </div>
@@ -65,7 +65,7 @@
         Front End Developer, based in Montréal, Canada
       </h3>
       <div class="navigation-links">
-        <a href="about.html#contact" class="contact-btn">Contact me</a>
+        <a href="#contact-anchor" class="contact-btn">Contact me</a>
         <a href="#project-anchor" class="projects-btn">See my projects →</a>
       </div>
     </div>
@@ -105,7 +105,7 @@
       </div>
     </div>
     <div class="container-fluid projects" id="project-anchor">
-      <h2 class="mb-3 projects-header">Projects</h2>
+      <h2 class="mb-3 projects-header">What I have been working on</h2>
 
       <div class="row mt-5 align-items-center">
         <div class="col project-description">
@@ -174,6 +174,13 @@
           <img src="images/yoga.png" class="img-fluid rounded project-img" />
         </div>
       </div>
+    </div>
+    <div class="container-fluid contact-container" id="contact-anchor">
+      <h2 class="contact-header">Let's get in touch!</h2>
+      <h3 class="contact-type">Email</h3>
+      <a href="mailto:carolnvcdias@gmail.com" class="email-link">
+        carolnvcdias@gmail.com
+      </a>
     </div>
   </body>
 </html>
