--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
       href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="/css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/e22fdd5115.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -182,5 +187,10 @@
         carolnvcdias@gmail.com
       </a>
     </div>
+    <footer>
+      <h6>Designed & Built by Carolina Dias</h6>
+      <i class="fa-brands fa-github"></i>
+      <a href="https://github.com/cdiascarol">Follow me on GitHub</a>
+    </footer>
   </body>
 </html>
