--- a/index.html
+++ b/index.html
@@ -127,7 +127,11 @@
             <div>Bootstrap</div>
           </div>
           <div class="mt-5">
-            <a href="#" class="project-link">Launch Weather App</a>
+            <a
+              href="https://easyweather-vanillajs.netlify.app/"
+              class="project-link"
+              >Launch Weather App</a
+            >
           </div>
         </div>
         <div class="col d-none d-lg-block">
