updated github link

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     <footer>
       <h6>Designed & Built by Carolina Dias</h6>
       <i class="fa-brands fa-github"></i>
-      <a href="https://github.com/cdiascarol">Follow me on GitHub</a>
+      <a href="https://github.com/cdiascarol/portfolio">Follow me on GitHub</a>
     </footer>
   </body>
 </html>
